--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,8 @@ board_build.core = maple
 framework = arduino
 upload_protocol = dfu
 upload_port = anything
-;;lib_extra_dirs = 
 lib_deps = enjoyneering/LiquidCrystal_I2C@^1.4.0
-;;marcoschwartz/LiquidCrystal_I2C@^1.1.4
-;;
+	greiman/SSD1306Ascii@^1.3.5
 	
 build_flags = 
 	-fpermissive ;; for Adafruit_I2CDevice
