--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,15 @@ board_build.core = maple
 framework = arduino
 upload_protocol = dfu
 upload_port = anything
+
+[env:stm32f103]
+platform = ststm32
+board = bluepill_f103c8
+framework = arduino
+upload_protocol = stlink
+upload_port = anything
+
+
 lib_deps = enjoyneering/LiquidCrystal_I2C@^1.4.0
 	greiman/SSD1306Ascii@^1.3.5
 	
