Add TM1637 test case

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,7 @@ upload_port = anything
 
 
 lib_deps = enjoyneering/LiquidCrystal_I2C@^1.4.0
+	smougenot/TM1637
 	greiman/SSD1306Ascii@^1.3.5
 	
 build_flags = 
